# tests-generation

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  merge.py  testgen.hpp
.github/workflows/: main.yml
examples/: CMakeLists.txt  oioioi.cpp  oioioi1.cpp  showcase.cpp
include/testgen/: assumptions.hpp  graph.hpp  manager.hpp  output.hpp  rand.hpp  sequence.hpp  testing.hpp  util.hpp
scripts/: clean.sh  merge.py
src/: graph.hpp  manager.hpp  output.hpp  rand.hpp  sequence.hpp  testing.hpp
test/: dist.t.cpp  dump.t.cpp  graph.t.cpp  manager.t.cpp  output.t.cpp  sequence.t.cpp  testing.t.cpp  tree.t.cpp
tests/: CMakeLists.txt  Makefile
tests/include/: doctest.h
tests/include/doctest/: doctest_extension.hpp
tests/old/: dist.t.cpp  dump.t.cpp  generating.t.cpp  output.t.cpp  sequence.t.cpp  test.hpp  testing.t.cpp
tests/src/: unit-assumptions.cpp  unit-dist.cpp  unit-dump.cpp  unit-graph.cpp  unit-manager.cpp  unit-output.cpp  unit-rand.cpp  unit-sequence.cpp  unit-single_test.cpp  unit-testing.cpp
